<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_inicio" />

    <item
        android:id="@+id/nav_materias"
        android:icon="@drawable/ic_book"
        android:title="@string/menu_materias" />

    <item
        android:id="@+id/nav_grupos"
        android:icon="@drawable/ic_group"
        android:title="@string/menu_grupos" />

    <item
        android:id="@+id/nav_calendario"
        android:icon="@drawable/ic_calendar"
        android:title="@string/menu_calendario" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_chat" />

    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_perfil" />

</menu>