<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/bg_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/dot"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/circle"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/materia_item_parcial"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"/>

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_item_parcial"
            android:textColor="@color/textSecondary"/>

        <TextView
            android:id="@+id/txtDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceso__item_parcial"
            android:textColor="@color/textMuted"/>

    </LinearLayout>

</LinearLayout>